# ai-agent

./: .env.example  .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  main_docs-ai-agent.yml
docs/: agents.md  architecture.md  azure-deploy-gpt4o-mini.md  copilot-studio-integration.md  dbml_mapping.md  erd_agent_desgin.md
scripts/: run_agent.py
src/api_agent/: __init__.py  extractor.py  models.py  run.py  scanner.py  writer.py
src/arch_agent/: __init__.py  extractor.py  models.py  run.py  scanner.py  writer.py
src/ddl_agent/: __init__.py  extractor.py  models.py  run.py  writer.py
src/erd_agent/: agent.py  cli.py  config.py  dbml_writer.py  docs_writer.py  model.py  normalize.py  repo.py  scanner.py  watch.py
src/erd_agent/commands/: __init__.py  erd.py
src/erd_agent/llm/: aoai_client.py  jpa_ai_extractor.py  schema_models.py  schema_refiner.py
src/erd_agent/parsers/: base.py  jpa_java.py
src/stack_agent/: __init__.py  extractor.py  models.py  run.py  scanner.py  writer.py
